# adapter-embedded

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
example/src/workflows/: mod.rs  workflow_1.rs  workflow_2.rs
migrations/: 20250718230647_init.up.sql
src/: lib.rs  managers.rs  receivers.rs  senders.rs
src/dependencies/: mod.rs
