[package]
name = "adapter-embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
adapter-types = { version = "0.1.0", git = "https://github.com/Zizico2/rust-workflow-2.git" }
async-channel = "2.5.0"
derive_more = { version = "2.0.1", features = ["full"] }
papaya = "0.2.3"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", default-features = false, features = [
    "sqlite",
    "macros",
    "uuid",
    "json",
    "runtime-tokio",
    "tls-rustls",
    "migrate",
] }
surgeflow-types = { version = "0.1.0", git = "https://github.com/Zizico2/rust-workflow-2.git" }
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[workspace]
members = [
    "example",
]
resolver = "2"
